--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "author": "KovalevEvgeniy",
   "license": "MIT & BSD",
   "devDependencies": {
-    "gulp": "^3.9.1",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-plumber": "^1.2.1",
-    "gulp-rm": "^2.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-uglify": "^3.0.1"
   }
 }
