--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ModuleCreator",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Module generator by created JQuery widgets",
   "author": "KovalevEvgeniy",
   "license": "MIT & BSD",
@@ -11,9 +11,9 @@
     "babel-core": "^6.26.3",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
-    "gulp-concat": "^2.6.1",
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.1"
+    "gulp-uglify": "^3.0.1",
+    "gulplog": "^1.0.0"
   }
 }
