change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ModuleCreator",
+  "name": "module-creator",
   "version": "1.4.1",
   "description": "Module generator by created JQuery widgets",
   "author": "KovalevEvgeniy",
