--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "gulp-rename": "^1.4.0",
     "gulp-uglify": "^3.0.1",
     "gulplog": "^1.0.0"
+  },
+  "scripts": {
+    "watch": "gulp watch"
   }
 }
